--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
-<body class="bg-gray-900 text-white font-sans" style="background: url('images.jpg') no-repeat center center fixed; background-size: cover;">
+<body class="bg-gray-900 text-white font-sans" style="background: url('images.png') no-repeat center center fixed; background-size: cover;">
   <header class="bg-gray-800 py-6 shadow-xl">
     <div class="container mx-auto flex justify-between items-center px-6">
       <h1 class="text-3xl font-extrabold text-cyan-400">MineDime Hosting</h1>
