--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1 class="text-3xl font-extrabold text-cyan-400">MineDime Hosting</h1>
       <nav class="space-x-6 text-lg">
         <a href="#features" class="hover:text-cyan-400">Features</a>
-        <a href="#pricing" class="hover:text-cyan-400">Pricing</a>
+        <a href="#builder" class="hover:text-cyan-400">Pricing</a>
         <a href="#contact" class="hover:text-cyan-400">Contact</a>
       </nav>
     </div>
@@ -61,44 +61,7 @@
     </div>
   </section>
 
-  <section id="pricing" class="py-20 bg-gray-800">
-    <h3 class="text-4xl font-bold text-center mb-12">Pricing Plans</h3>
-    <div class="container mx-auto grid md:grid-cols-3 gap-10 px-6">
-      <div class="bg-gray-900 p-8 rounded-2xl shadow-xl border border-cyan-500 animate__animated animate__zoomIn">
-        <h4 class="text-3xl font-bold mb-4">Starter</h4>
-        <p class="text-cyan-400 text-4xl font-bold mb-4">$3<span class="text-xl">/mo</span></p>
-        <ul class="text-gray-300 space-y-2 mb-6">
-          <li>2 GB RAM</li>
-          <li>NVMe SSD Storage</li>
-          <li>DDoS Protection</li>
-          <li>Instant Setup</li>
-        </ul>
-        <a href="#" class="block text-center btn-hover font-bold py-3 rounded-xl">Order Now</a>
-      </div>
-      <div class="bg-gray-900 p-8 rounded-2xl shadow-xl border border-cyan-500 animate__animated animate__zoomIn">
-        <h4 class="text-3xl font-bold mb-4">Advanced</h4>
-        <p class="text-cyan-400 text-4xl font-bold mb-4">$6<span class="text-xl">/mo</span></p>
-        <ul class="text-gray-300 space-y-2 mb-6">
-          <li>4 GB RAM</li>
-          <li>NVMe SSD Storage</li>
-          <li>DDoS Protection</li>
-          <li>Fast Support</li>
-        </ul>
-        <a href="#" class="block text-center btn-hover font-bold py-3 rounded-xl">Order Now</a>
-      </div>
-      <div class="bg-gray-900 p-8 rounded-2xl shadow-xl border border-cyan-500 animate__animated animate__zoomIn">
-        <h4 class="text-3xl font-bold mb-4">Pro</h4>
-        <p class="text-cyan-400 text-4xl font-bold mb-4">$10<span class="text-xl">/mo</span></p>
-        <ul class="text-gray-300 space-y-2 mb-6">
-          <li>8 GB RAM</li>
-          <li>NVMe SSD Storage</li>
-          <li>DDoS Protection</li>
-          <li>Priority Support</li>
-        </ul>
-        <a href="#" class="block text-center btn-hover font-bold py-3 rounded-xl">Order Now</a>
-      </div>
-    </div>
-  </section>
+  
 
   <section id="contact" class="py-20 container mx-auto px-6">
     <h3 class="text-4xl font-bold text-center mb-10">Contact Us</h3>
@@ -109,5 +72,131 @@
   <footer class="bg-gray-800 py-6 mt-16 text-center text-gray-400">
     © 2025 MineDime Hosting. All rights reserved.
   </footer>
+<section class="py-24 text-center animate__animated animate__fadeInUp">
+  <h2 class="text-4xl font-bold mb-6" id="builder">Custom Plan Builder</h2>
+  <p class="text-gray-300 mb-8">Create your own server plan and instantly send your order to our Discord!</p>
+
+  <div class="max-w-2xl mx-auto bg-gray-800 p-8 rounded-2xl shadow-lg">
+
+    <label class="block text-left mb-4 text-lg">RAM (1–25 GB)</label>
+    <input id="ramInput" type="range" min="1" max="25" value="1" class="w-full mb-2">
+    <p id="ramValue" class="mb-6 text-cyan-400">1 GB — €1</p>
+
+    <label class="block text-left mb-4 text-lg">Storage (10–300 GB)</label>
+    <input id="storageInput" type="range" min="10" max="300" step="10" value="10" class="w-full mb-2">
+    <p id="storageValue" class="mb-6 text-cyan-400">10 GB — €3</p>
+
+    <label class="block text-left mb-4 text-lg">Currency</label>
+    <select id="currencySelect" class="w-full p-3 rounded-lg bg-gray-700 mb-6">
+      <option value="EUR">EUR (€)</option>
+      <option value="USD">USD ($)</option>
+      <option value="GBP">GBP (£)</option>
+      <option value="CHF">CHF (₣)</option>
+      <option value="CAD">CAD (C$)</option>
+    </select>
+
+    <label class="block text-left mb-4 text-lg">Your Discord Username</label>
+    <input id="discordUser" type="text" placeholder="Discord username" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
+
+    <label class="block text-left mb-4 text-lg">Your Email</label>
+    <input id="emailUser" type="email" placeholder="example@gmail.com" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
+
+    <label class="block text-left mb-4 text-lg">Your Minecraft Username</label>
+    <input id="mcUser" type="text" placeholder="Minecraft username" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
+
+    <label class="block text-left mb-4 text-lg">Region</label>
+    <select id="regionSelect" class="w-full p-3 rounded-lg bg-gray-700 mb-6">
+      <option value="EU">EU (Berlin)</option>
+      <option value="NA">NA (New York)</option>
+      <option value="AS">AS (Singapore)</option>
+    </select>
+
+    <button id="submitOrder" class="bg-blue-600 hover:bg-blue-700 px-8 py-4 rounded-xl font-bold text-lg w-full transition transform hover:scale-105">Send Order</button>
+
+    <p id="finalPrice" class="mt-6 text-2xl font-bold"></p>
+
+  </div>
+</section>
+
+<script>
+const ramInput = document.getElementById('ramInput');
+const storageInput = document.getElementById('storageInput');
+const currencySelect = document.getElementById('currencySelect');
+const discordUser = document.getElementById('discordUser');
+const emailUser = document.getElementById('emailUser');
+const mcUser = document.getElementById('mcUser');
+const regionSelect = document.getElementById('regionSelect');
+const priceBox = document.getElementById('finalPrice');
+
+const ramValue = document.getElementById('ramValue');
+const storageValue = document.getElementById('storageValue');
+const submitOrder = document.getElementById('submitOrder');
+
+const exchangeRates = {
+  EUR: 1,
+  USD: 1.08,
+  GBP: 0.85,
+  CHF: 0.96,
+  CAD: 1.48
+};
+
+function updatePrice() {
+  const ramPrice = ramInput.value * 1;
+  const storagePrice = (storageInput.value / 10) * 3;
+  const totalEUR = ramPrice + storagePrice;
+
+  const currency = currencySelect.value;
+  const region = regionSelect.value;
+  const converted = totalEUR * exchangeRates[currency];
+
+  ramValue.innerText = `${ramInput.value} GB — €${ramPrice}`;
+  storageValue.innerText = `${storageInput.value} GB — €${storagePrice}`;
+
+  priceBox.innerText = `Total: ${converted.toFixed(2)} ${currency}`;
+}
+
+ramInput.oninput = updatePrice;
+storageInput.oninput = updatePrice;
+currencySelect.onchange = updatePrice;
+updatePrice();
+
+submitOrder.onclick = async () => {
+  if (!discordUser.value || !emailUser.value || !mcUser.value) {
+    alert('Enter your Discord username first!');
+    return;
+  }
+
+  const ram = ramInput.value;
+  const storage = storageInput.value;
+  const currency = currencySelect.value;
+
+  const ramPrice = ram * 1;
+  const storagePrice = (storage / 10) * 3;
+  const total = (ramPrice + storagePrice) * exchangeRates[currency];
+
+  const webhookURL = "https://discord.com/api/webhooks/1443340087550279702/h_35PmopoISdZp_nyBb5gs5d6Lgr-Wzl_Cfjb1IT3OCyHnHuYp6uGaLbq0VKfDB87yRS";
+
+  const message = {
+    content: `✨ **New Custom Order** ✨
+
+**User:** ${discordUser.value}
+**RAM:** ${ram} GB
+**Storage:** ${storage} GB
+**Price:** ${total.toFixed(2)} ${currency}
+**Email:** ${emailUser.value}
+**Minecraft:** ${mcUser.value}
+**Region:** ${region}`
+  };
+
+  await fetch(webhookURL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(message)
+  });
+
+  alert('Order sent to Discord!');
+};
+</script>
+
 </body>
 </html>
