--- a/index.html
+++ b/index.html
@@ -63,15 +63,17 @@
 
   
 
-  <section id="contact" class="py-20 container mx-auto px-6">
-    <h3 class="text-4xl font-bold text-center mb-10">Contact Us</h3>
-    <p class="text-center text-gray-300 mb-6">Have questions? Reach out and our team will assist you.</p>
-    <p class="text-center text-cyan-400 text-xl">support@minedime.org</p>
-  </section>
+  
 
-  <footer class="bg-gray-800 py-6 mt-16 text-center text-gray-400">
-    © 2025 MineDime Hosting. All rights reserved.
-  </footer>
+  
+
+<section id="contact" class="py-20 container mx-auto px-6 text-center">
+  <h3 class="text-4xl font-bold mb-6">Contact Us</h3>
+  <p class="text-gray-300 mb-4">Have questions? Reach out and our team will assist you.</p>
+  <p class="text-cyan-400 text-xl mb-6">support@minedime.org</p>
+  <p class="text-red-400 font-bold mb-4">You must join our Discord server before purchasing!</p>
+  <a href="https://discord.gg/jcqgVNNRnX" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-xl font-bold transition transform hover:scale-105">Join Discord</a>
+</section>
 <section class="py-24 text-center animate__animated animate__fadeInUp">
   <h2 class="text-4xl font-bold mb-6" id="builder">Custom Plan Builder</h2>
   <p class="text-gray-300 mb-8">Create your own server plan and instantly send your order to our Discord!</p>
@@ -101,7 +103,7 @@
     <label class="block text-left mb-4 text-lg">Your Email</label>
     <input id="emailUser" type="email" placeholder="example@gmail.com" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
 
-    <label class="block text-left mb-4 text-lg">Your Minecraft Username</label>
+    <label class="block text-left mb-4 text-lg">Your Username for Our Hosting</label>
     <input id="mcUser" type="text" placeholder="Minecraft username" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
 
     <label class="block text-left mb-4 text-lg">Region</label>
@@ -198,5 +200,8 @@ submitOrder.onclick = async () => {
 };
 </script>
 
+<footer class="bg-gray-800 py-6 mt-16 text-center text-gray-400">
+  © 2025 MineDime Hosting. All rights reserved.
+</footer>
 </body>
 </html>
