--- a/index.html
+++ b/index.html
@@ -7,31 +7,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
-    .btn-hover {
-      background-color: #0ea5e9;
-      color: black;
-      transition: all 0.3s ease;
-    }
-    .btn-hover:hover {
-      background-color: #1e40af !important;
-      transform: scale(1.05);
-    }
-    .feature-hover {
-      transition: all 0.3s ease;
-    }
-    .feature-hover:hover {
-      background-color: rgba(30, 64, 175, 0.8);
-      transform: scale(1.05);
-    }
+    .btn-hover { background-color: #0ea5e9; color: black; transition: all 0.3s ease; }
+    .btn-hover:hover { background-color: #1e40af !important; transform: scale(1.05); }
+    .feature-hover { transition: all 0.3s ease; }
+    .feature-hover:hover { background-color: rgba(30, 64, 175, 0.8); transform: scale(1.05); }
   </style>
 </head>
 <body class="bg-gray-900 text-white font-sans" style="background: url('images.png') no-repeat center center fixed; background-size: cover;">
+
   <header class="bg-gray-800 py-6 shadow-xl">
     <div class="container mx-auto flex justify-between items-center px-6">
       <h1 class="text-3xl font-extrabold text-cyan-400">MineDime Hosting</h1>
       <nav class="space-x-6 text-lg">
         <a href="#features" class="hover:text-cyan-400">Features</a>
-        <a href="#builder" class="hover:text-cyan-400">Pricing</a>
+        <a href="#builder" class="hover:text-cyan-400">Plan Builder</a>
         <a href="#contact" class="hover:text-cyan-400">Contact</a>
       </nav>
     </div>
@@ -40,7 +29,7 @@
   <section class="text-center py-24 bg-gradient-to-b from-gray-900 to-gray-800 animate__animated animate__fadeIn">
     <h2 class="text-5xl font-extrabold mb-6">Powerful Minecraft Hosting</h2>
     <p class="text-xl text-gray-300 max-w-2xl mx-auto">Blazing-fast performance, DDoS protection, premium hardware, and instant setup. Start your Minecraft server with MineDime Hosting today.</p>
-    <a href="#pricing" class="mt-10 inline-block btn-hover font-bold py-3 px-8 rounded-xl shadow-lg">Get Started</a>
+    <a href="#builder" class="mt-10 inline-block btn-hover font-bold py-3 px-8 rounded-xl shadow-lg">Get Started</a>
   </section>
 
   <section id="features" class="py-20 container mx-auto px-6">
@@ -61,150 +50,125 @@
     </div>
   </section>
 
-  
+  <section id="builder" class="py-24 text-center animate__animated animate__fadeInUp">
+    <h2 class="text-4xl font-bold mb-6">Custom Plan Builder</h2>
+    <p class="text-gray-300 mb-8">Create your own server plan and instantly send your order to our Discord!</p>
 
-  
+    <div class="max-w-2xl mx-auto bg-gray-800 p-8 rounded-2xl shadow-lg">
 
-  
+      <label class="block text-left mb-4 text-lg">RAM (1–25 GB)</label>
+      <input id="ramInput" type="range" min="1" max="25" value="1" class="w-full mb-2">
+      <p id="ramValue" class="mb-6 text-cyan-400">1 GB — €1</p>
 
-<section id="contact" class="py-20 container mx-auto px-6 text-center">
-  <div class="bg-gray-800 bg-opacity-70 p-10 rounded-2xl shadow-2xl max-w-2xl mx-auto border border-cyan-400">
-    <h3 class="text-4xl font-bold mb-6 text-cyan-400">Contact Us</h3>
-    <p class="text-gray-300 mb-4 text-lg">Have questions? Reach out and our team will assist you.</p>
-    <p class="text-cyan-400 text-xl font-semibold mb-8">support@minedime.org</p>
+      <label class="block text-left mb-4 text-lg">Storage (10–300 GB)</label>
+      <input id="storageInput" type="range" min="10" max="300" step="10" value="10" class="w-full mb-2">
+      <p id="storageValue" class="mb-6 text-cyan-400">10 GB — €3</p>
 
-    <p class="text-red-400 font-bold mb-4 text-lg">You must join our Discord server before purchasing!</p>
-    <a href="https://discord.gg/jcqgVNNRnX" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-xl font-bold transition-all transform hover:scale-110 shadow-lg">Join Discord</a>
-  </div>
-</section>
-<section class="py-24 text-center animate__animated animate__fadeInUp">
-  <h2 class="text-4xl font-bold mb-6" id="builder">Custom Plan Builder</h2>
-  <p class="text-gray-300 mb-8">Create your own server plan and instantly send your order to our Discord!</p>
+      <label class="block text-left mb-4 text-lg">Currency</label>
+      <select id="currencySelect" class="w-full p-3 rounded-lg bg-gray-700 mb-6">
+        <option value="EUR">EUR (€)</option>
+        <option value="USD">USD ($)</option>
+        <option value="GBP">GBP (£)</option>
+        <option value="CHF">CHF (₣)</option>
+        <option value="CAD">CAD (C$)</option>
+      </select>
 
-  <div class="max-w-2xl mx-auto bg-gray-800 p-8 rounded-2xl shadow-lg">
+      <label class="block text-left mb-4 text-lg">Your Discord Username</label>
+      <input id="discordUser" type="text" placeholder="Discord username" class="w-full p-3 mb-6 rounded-lg bg-gray-700" required>
 
-    <label class="block text-left mb-4 text-lg">RAM (1–25 GB)</label>
-    <input id="ramInput" type="range" min="1" max="25" value="1" class="w-full mb-2">
-    <p id="ramValue" class="mb-6 text-cyan-400">1 GB — €1</p>
+      <label class="block text-left mb-4 text-lg">Your Email</label>
+      <input id="emailUser" type="email" placeholder="example@gmail.com" class="w-full p-3 mb-6 rounded-lg bg-gray-700" required>
 
-    <label class="block text-left mb-4 text-lg">Storage (10–300 GB)</label>
-    <input id="storageInput" type="range" min="10" max="300" step="10" value="10" class="w-full mb-2">
-    <p id="storageValue" class="mb-6 text-cyan-400">10 GB — €3</p>
+      <label class="block text-left mb-4 text-lg">Your Username for Our Hosting</label>
+      <input id="mcUser" type="text" placeholder="Minecraft username" class="w-full p-3 mb-6 rounded-lg bg-gray-700" required>
 
-    <label class="block text-left mb-4 text-lg">Currency</label>
-    <select id="currencySelect" class="w-full p-3 rounded-lg bg-gray-700 mb-6">
-      <option value="EUR">EUR (€)</option>
-      <option value="USD">USD ($)</option>
-      <option value="GBP">GBP (£)</option>
-      <option value="CHF">CHF (₣)</option>
-      <option value="CAD">CAD (C$)</option>
-    </select>
+      <label class="block text-left mb-4 text-lg">Region</label>
+      <select id="regionSelect" class="w-full p-3 rounded-lg bg-gray-700 mb-6">
+        <option value="EU">EU (Berlin)</option>
+        <option value="NA">NA (New York)</option>
+        <option value="AS">AS (Singapore)</option>
+      </select>
 
-    <label class="block text-left mb-4 text-lg">Your Discord Username</label>
-    <input id="discordUser" type="text" placeholder="Discord username" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
+      <button id="submitOrder" class="bg-blue-600 hover:bg-blue-700 px-8 py-4 rounded-xl font-bold text-lg w-full transition transform hover:scale-105">Send Order</button>
+      <p id="finalPrice" class="mt-6 text-2xl font-bold"></p>
+      <div class="success mt-4" id="orderSuccess" style="display:none;">✅ Order was sent successfully! Please wait for your response.</div>
 
-    <label class="block text-left mb-4 text-lg">Your Email</label>
-    <input id="emailUser" type="email" placeholder="example@gmail.com" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
+    </div>
+  </section>
 
-    <label class="block text-left mb-4 text-lg">Your Username for Our Hosting</label>
-    <input id="mcUser" type="text" placeholder="Minecraft username" class="w-full p-3 mb-6 rounded-lg bg-gray-700">
+  <section id="contact" class="py-20 container mx-auto px-6 text-center">
+    <div class="bg-gray-800 bg-opacity-70 p-10 rounded-2xl shadow-2xl max-w-2xl mx-auto border border-cyan-400">
+      <h3 class="text-4xl font-bold mb-6 text-cyan-400">Contact Us</h3>
+      <p class="text-gray-300 mb-4 text-lg">Have questions? Reach out and our team will assist you.</p>
+      <p class="text-cyan-400 text-xl font-semibold mb-8">support@minedime.org</p>
+      <p class="text-red-400 font-bold mb-4 text-lg">You must join our Discord server before purchasing!</p>
+      <a href="https://discord.gg/jcqgVNNRnX" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-xl font-bold transition-all transform hover:scale-110 shadow-lg">Join Discord</a>
+    </div>
+  </section>
 
-    <label class="block text-left mb-4 text-lg">Region</label>
-    <select id="regionSelect" class="w-full p-3 rounded-lg bg-gray-700 mb-6">
-      <option value="EU">EU (Berlin)</option>
-      <option value="NA">NA (New York)</option>
-      <option value="AS">AS (Singapore)</option>
-    </select>
+  <footer class="bg-gray-800 py-6 mt-16 text-center text-gray-400">
+    © 2025 MineDime Hosting. All rights reserved.
+  </footer>
 
-    <button id="submitOrder" class="bg-blue-600 hover:bg-blue-700 px-8 py-4 rounded-xl font-bold text-lg w-full transition transform hover:scale-105">Send Order</button>
+  <script>
+    const ramInput = document.getElementById('ramInput');
+    const storageInput = document.getElementById('storageInput');
+    const currencySelect = document.getElementById('currencySelect');
+    const discordUser = document.getElementById('discordUser');
+    const emailUser = document.getElementById('emailUser');
+    const mcUser = document.getElementById('mcUser');
+    const regionSelect = document.getElementById('regionSelect');
+    const priceBox = document.getElementById('finalPrice');
+    const orderSuccess = document.getElementById('orderSuccess');
 
-    <p id="finalPrice" class="mt-6 text-2xl font-bold"></p>
+    const ramValue = document.getElementById('ramValue');
+    const storageValue = document.getElementById('storageValue');
+    const submitOrder = document.getElementById('submitOrder');
 
-  </div>
-</section>
+    const exchangeRates = { EUR: 1, USD: 1.08, GBP: 0.85, CHF: 0.96, CAD: 1.48 };
 
-<script>
-const ramInput = document.getElementById('ramInput');
-const storageInput = document.getElementById('storageInput');
-const currencySelect = document.getElementById('currencySelect');
-const discordUser = document.getElementById('discordUser');
-const emailUser = document.getElementById('emailUser');
-const mcUser = document.getElementById('mcUser');
-const regionSelect = document.getElementById('regionSelect');
-const priceBox = document.getElementById('finalPrice');
+    function updatePrice() {
+      const ramPrice = ramInput.value * 1;
+      const storagePrice = (storageInput.value / 10) * 3;
+      const totalEUR = ramPrice + storagePrice;
+      const currency = currencySelect.value;
+      const converted = totalEUR * exchangeRates[currency];
 
-const ramValue = document.getElementById('ramValue');
-const storageValue = document.getElementById('storageValue');
-const submitOrder = document.getElementById('submitOrder');
+      ramValue.innerText = `${ramInput.value} GB — €${ramPrice}`;
+      storageValue.innerText = `${storageInput.value} GB — €${storagePrice}`;
+      priceBox.innerText = `Total: ${converted.toFixed(2)} ${currency}`;
+    }
 
-const exchangeRates = {
-  EUR: 1,
-  USD: 1.08,
-  GBP: 0.85,
-  CHF: 0.96,
-  CAD: 1.48
-};
+    ramInput.oninput = updatePrice;
+    storageInput.oninput = updatePrice;
+    currencySelect.onchange = updatePrice;
+    updatePrice();
 
-function updatePrice() {
-  const ramPrice = ramInput.value * 1;
-  const storagePrice = (storageInput.value / 10) * 3;
-  const totalEUR = ramPrice + storagePrice;
+    submitOrder.onclick = async () => {
+      if (!discordUser.value || !emailUser.value || !mcUser.value) {
+        alert('Please fill in all required fields!');
+        return;
+      }
 
-  const currency = currencySelect.value;
-  const region = regionSelect.value;
-  const converted = totalEUR * exchangeRates[currency];
+      const ram = ramInput.value;
+      const storage = storageInput.value;
+      const currency = currencySelect.value;
+      const region = regionSelect.value;
+      const ramPrice = ram * 1;
+      const storagePrice = (storage / 10) * 3;
+      const total = (ramPrice + storagePrice) * exchangeRates[currency];
 
-  ramValue.innerText = `${ramInput.value} GB — €${ramPrice}`;
-  storageValue.innerText = `${storageInput.value} GB — €${storagePrice}`;
+      const content = `✨ **New Custom Order** ✨\n\n**Discord:** ${discordUser.value}\n**Email:** ${emailUser.value}\n**Username:** ${mcUser.value}\n**RAM:** ${ram} GB\n**Storage:** ${storage} GB\n**Region:** ${region}\n**Price:** ${total.toFixed(2)} ${currency}`;
 
-  priceBox.innerText = `Total: ${converted.toFixed(2)} ${currency}`;
-}
+      await fetch("https://discord.com/api/webhooks/1443340087550279702/h_35PmopoISdZp_nyBb5gs5d6Lgr-Wzl_Cfjb1IT3OCyHnHuYp6uGaLbq0VKfDB87yRS", {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ content })
+      });
 
-ramInput.oninput = updatePrice;
-storageInput.oninput = updatePrice;
-currencySelect.onchange = updatePrice;
-updatePrice();
-
-submitOrder.onclick = async () => {
-  if (!discordUser.value || !emailUser.value || !mcUser.value) {
-    alert('Enter your Discord username first!');
-    return;
-  }
-
-  const ram = ramInput.value;
-  const storage = storageInput.value;
-  const currency = currencySelect.value;
-
-  const ramPrice = ram * 1;
-  const storagePrice = (storage / 10) * 3;
-  const total = (ramPrice + storagePrice) * exchangeRates[currency];
-
-  const webhookURL = "https://discord.com/api/webhooks/1443340087550279702/h_35PmopoISdZp_nyBb5gs5d6Lgr-Wzl_Cfjb1IT3OCyHnHuYp6uGaLbq0VKfDB87yRS";
-
-  const message = {
-    content: `✨ **New Custom Order** ✨
-
-**User:** ${discordUser.value}
-**RAM:** ${ram} GB
-**Storage:** ${storage} GB
-**Price:** ${total.toFixed(2)} ${currency}
-**Email:** ${emailUser.value}
-**Minecraft:** ${mcUser.value}
-**Region:** ${region}`
-  };
-
-  await fetch(webhookURL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(message)
-  });
-
-  alert('Order was sent successfully! Please wait for your response.');
-};
-</script>
-
-<footer class="bg-gray-800 py-6 mt-16 text-center text-gray-400">
-  © 2025 MineDime Hosting. All rights reserved.
-</footer>
+      orderSuccess.style.display = 'block';
+      submitOrder.disabled = true;
+    };
+  </script>
 </body>
 </html>
